@@ -41,6 +41,11 @@
       <para>2010-01-24</para>
       <itemizedlist>
         <listitem>
+          <para>[matthew] Update to lfs-bootscripts-20100124, which checks that
+          /dev isn't already mounted. Fixes
+          <ulink url="&lfs-ticket-root;2550">#2550</ulink>.</para>
+        </listitem>
+        <listitem>
           <para>[matthew] Don't create /lib/udev/devices/kmsg as Udev >= 142
           creates it automatically. Fixes
           <ulink url="&lfs-ticket-root;2552">#2552</ulink>.</para>
